--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "dependencies": {
     "core-js": "^3.36.0",
-    "regenerator-runtime": "^0.14.1"
+    "regenerator-runtime": "^0.14.1",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -35,6 +36,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@types/office-js": "^1.0.377",
     "@types/office-runtime": "^1.0.35",
+    "@vue/compiler-sfc": "^3.5.13",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "eslint-plugin-office-addins": "^4.0.3",
@@ -51,6 +53,8 @@
     "process": "^0.11.10",
     "source-map-loader": "^5.0.0",
     "typescript": "^5.4.2",
+    "vue-loader": "^17.3.1",
+    "vue-style-loader": "^4.1.3",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "5.1.0"
