--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "core-js": "^3.36.0",
     "regenerator-runtime": "^0.14.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-i18n": "^9.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
