--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
       "javascript",
       "javascriptreact",
       "typescript"
+    ],
+    "i18n-ally.localesPaths": [
+      "src/i18n"
     ]
   }
   
