--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "core-js": "^3.36.0",
     "regenerator-runtime": "^0.14.1",
+    "sass": "^1.87.0",
     "vue": "^3.5.13",
-    "vue-i18n": "^9.14.4"
+    "vue-i18n": "^9.14.4",
+    "vuetify": "^3.8.0-beta.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -40,6 +43,7 @@
     "@vue/compiler-sfc": "^3.5.13",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
     "eslint-plugin-office-addins": "^4.0.3",
     "file-loader": "^6.2.0",
     "html-loader": "^5.0.0",
@@ -53,6 +57,7 @@
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "source-map-loader": "^5.0.0",
+    "style-loader": "^4.0.0",
     "typescript": "^5.4.2",
     "vue-loader": "^17.3.1",
     "vue-style-loader": "^4.1.3",
